<resources>
    <string name="app_name">JulyTimer</string>
    <string name="time_elapsed">, seit du mich gesehen hast:</string>
    <string name="time_till_seen">, bis du mich wiedersiehst:</string>
    <string name="percentage_done">Prozent schon geschafft:</string>
    <string name="time">Zeit</string>
    <string name="seconds">Sekunden</string>
    <string name="minutes">Minuten</string>
    <string name="hours">Stunden</string>
    <string name="days">Tage</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Strings used for the main Settings Page -->
    <string name="back">zurück</string>
    <string name="timeShow">Zeitanzeige Konfigurieren</string>
    <string name="changeDates">Daten ändern</string>
    <string name="customizeDarkmode">Farbmodi Personalisieren</string>
    <string name="changeBackground">Hintergrundbild ändern</string>
    <string name="showMilestones">Meilensteine anzeigen</string>
    <string name="reset">zurücksetzen</string>
    <string name="showMessage">Nachricht anzeigen:</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>

    <!-- Strings used for fragments for navigation -->
    <string name="settings_main_label">Einstellungen</string>
    <string name="changeDatesStartDateText">Startdatum:</string>
    <string name="changeDatesEndDateText">Enddatum:</string>

    <!-- Strings used for Milestone-->
    <string name="oneQuarter">Ein Viertel ist schon geschafft!</string>
    <string name="oneThird">Ein Drittel ist schon geschafft!</string>
    <string name="oneHalf">Die Hälfte ist schon geschafft!</string>
    <string name="twoThirds">Zwei Drittel sind schon geschafft!</string>
    <string name="threeQuarters">Drei Viertel sind schon geschafft!</string>
    <string name="ninetyPercent">90% sind schon geschafft!</string>
    <string name="allDone">Der Timer ist fertig!</string>

    <!-- Strings used for Button Texts Customizing the Color Schemes-->
    <string name="backgroundButtonText">Hinten</string>
    <string name="buttonButtonText">Knopf</string>
    <string name="textButtonText">Text</string>

    <string name="brightModeColorSchemeLabel">Aktuelle Farben im hellen Modus:</string>
    <string name="darkModeColorSchemeLabel">Aktuelle Farben im dunklen Modus:</string>
    <string name="colorScheme">Farbmodus:</string>
    <string name="dark">dunkel</string>
    <string name="bright">hell</string>
    <string name="automatic">automatisch</string>

    <string name="beginDarkMode">Beginn des dunklen Modus:</string>
    <string name="endDarkMode">Beginn des hellen Modus:</string>
    <string name="oClock">Uhr</string>
    <string name="time_till_go">, bis der Timer losgeht:</string>
</resources>