<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/showMileStonesLayout"
    android:layout_height="match_parent">

    <!-- Hintergrund ImageView -->
    <ImageView
        android:id="@+id/showMileStonesBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop" />

    <!-- Knopf oben -->
    <Button
        android:id="@+id/showMileStonesBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextViews darunter -->
    <TextView
        android:id="@+id/showMileStoneOneQuarter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/oneQuarter"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStonesBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneOneThird"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/oneThird"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneOneQuarter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneOneHalf"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/oneHalf"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneOneThird"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneTwoThirds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/twoThirds"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneOneHalf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneThreeQuarters"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/threeQuarters"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneNinetyPercent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ninetyPercent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneThreeQuarters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/showMileStoneDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/allDone"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        app:layout_constraintTop_toBottomOf="@id/showMileStoneNinetyPercent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>