<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/settingsMainLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    tools:context=".FirstFragment">

    <Button
        android:id="@+id/mainSettingsBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/mainSettingsTimeShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/timeShow"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsBack"/>

    <Button
        android:id="@+id/mainSettingsChangeDates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/changeDates"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsTimeShow"/>

    <Button
        android:id="@+id/mainSettingsCustomizeDarkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/customizeDarkmode"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsChangeDates"/>

    <Button
        android:id="@+id/mainSettingsChangeBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/changeBackground"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsCustomizeDarkMode"/>

    <Button
        android:id="@+id/mainSettingsShowMilestones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/showMilestones"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsChangeBackground"/>

    <Button
        android:id="@+id/mainSettingsReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:background="@color/black"
        android:text="@string/reset"
        app:layout_constraintTop_toBottomOf="@id/mainSettingsShowMilestones"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>