<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/customizeTimeLayout"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Button -->
    <Button
        android:id="@+id/customizeTimeShowBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_centerInParent="true"
        android:text="@string/back"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/customizeTimeShowBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!-- Checkbox 1 -->
    <CheckBox
        android:id="@+id/cbSeconds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seconds"
        app:layout_constraintTop_toBottomOf="@id/customizeTimeShowBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Checkbox 2 -->
    <CheckBox
        android:id="@+id/cbMinutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/minutes"
        app:layout_constraintTop_toBottomOf="@+id/cbSeconds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Checkbox 3 -->
    <CheckBox
        android:id="@+id/cbHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintTop_toBottomOf="@+id/cbMinutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <!-- Checkbox 4 -->
    <CheckBox
        android:id="@+id/cbDays"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/days"
        app:layout_constraintTop_toBottomOf="@+id/cbHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>