<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/customizeColorSchemeBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible"
        tools:ignore="ContentDescription" />

    <Button
        android:id="@+id/customizeColorSchemeBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />
    <!-- Erster Satz von Views -->

    <!-- TextView 1 -->
    <TextView
        android:id="@+id/brightModeButtonsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brightModeColorSchemeLabel"
        app:layout_constraintTop_toBottomOf="@+id/customizeColorSchemeBackButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Button 1.1 -->
    <Button
        android:id="@+id/brightModeBackgroundColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/backgroundButtonText"
        app:layout_constraintEnd_toStartOf="@+id/brightModeButtonColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brightModeButtonsText"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <!-- Button 1.2 -->
    <Button
        android:id="@+id/brightModeButtonColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/buttonButtonText"
        app:layout_constraintEnd_toStartOf="@+id/brightModeTextColorButton"
        app:layout_constraintStart_toEndOf="@+id/brightModeBackgroundColorButton"
        app:layout_constraintTop_toBottomOf="@+id/brightModeButtonsText"
        tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck,VisualLintButtonSize" />

    <!-- Button 1.3 -->
    <Button
        android:id="@+id/brightModeTextColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/textButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/brightModeButtonColorButton"
        app:layout_constraintTop_toBottomOf="@+id/brightModeButtonsText"
        tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintButtonSize" />

    <!-- Zweiter Satz von Views -->

    <!-- TextView 2 -->
    <TextView
        android:id="@+id/darkModeButtonsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkModeColorSchemeLabel"
        app:layout_constraintTop_toBottomOf="@+id/brightModeTextColorButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <!-- Button 2.1 -->
    <Button
        android:id="@+id/darkModeBackgroundColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/backgroundButtonText"
        app:layout_constraintTop_toBottomOf="@+id/darkModeButtonsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/darkModeButtonColorButton"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"
        android:layout_marginStart="20dp"/>

    <!-- Button 2.2 -->
    <Button
        android:id="@+id/darkModeButtonColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/buttonButtonText"
        app:layout_constraintEnd_toStartOf="@+id/darkModeTextColorButton"
        app:layout_constraintStart_toEndOf="@+id/darkModeBackgroundColorButton"
        app:layout_constraintTop_toBottomOf="@+id/darkModeButtonsText"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />

    <!-- Button 2.3 -->
    <Button
        android:id="@+id/darkModeTextColorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textButtonText"
        app:layout_constraintTop_toBottomOf="@+id/darkModeButtonsText"
        app:layout_constraintStart_toEndOf="@+id/darkModeButtonColorButton"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        tools:ignore="TextContrastCheck,VisualLintButtonSize"
        android:layout_marginEnd="20dp"/>

    <Button
        android:id="@+id/customizeColorSchemeChangeButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/darkModeButtonColorButton"
        tools:ignore="SpeakableTextPresentCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/darkModeStartTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/customizeColorSchemeChangeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/darkModeEndTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/darkModeStartTimeLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>