<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Hintergrundbild -->
    <ImageView
        android:id="@+id/changeDatesBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:background="@color/design_default_color_secondary"
        tools:ignore="ContentDescription" />
    <!-- android:src mit Hintergrundbild austauschen -->
    <!-- Button at the top occupying the entire width -->
    <Button
        android:id="@+id/changeDatesBackButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- TextView above the first button with 20dp margin -->
    <TextView
        android:id="@+id/changeDatesStartDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/changeDatesStartDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDatesBackButton" />

    <!-- First button below the top button -->
    <Button
        android:id="@+id/changeDatesStartDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/changeDatesStartDateText"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/changeDatesStartDateText"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- TextView above the second button with 20dp margin -->
    <TextView
        android:id="@+id/changeDatesEndDateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/changeDatesEndDateText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeDatesStartDateButton" />

    <!-- Second button below the first button with 30dp margin -->
    <Button
        android:id="@+id/changeDatesEndDateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/changeDatesEndDateText"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/changeDatesEndDateText"
        android:gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/black"
        android:layout_marginTop="10dp" />

</androidx.constraintlayout.widget.ConstraintLayout>